src/objects/Code_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <description>Code in CMSv10</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Portal_Value__c</fullName>
        <description>Code Description to be shown in CXE Customer Portal</description>
        <label>Portal Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Code Sub Type - Only for Payment Office now</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MERALCO</fullName>
                </value>
                <value>
                    <fullName>APA</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Code Type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Billing Type</fullName>
                </value>
                <value>
                    <fullName>Bill Note Status</fullName>
                </value>
                <value>
                    <fullName>Bill Type</fullName>
                </value>
                <value>
                    <fullName>Event Type</fullName>
                </value>
                <value>
                    <fullName>Payment Mode</fullName>
                </value>
                <value>
                    <fullName>Payment Office</fullName>
                </value>
                <value>
                    <fullName>Payment Source</fullName>
                </value>
                <value>
                    <fullName>Payment Status</fullName>
                </value>
                <value>
                    <fullName>Return Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>V10_Value__c</fullName>
        <description>Code Description in CMSv10</description>
        <label>V10 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Code Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>V10_Value__c</columns>
        <columns>Portal_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>